font not uploading correctly on mobile, fixed it?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,8 @@ a {
 
        /* DESKTOP             */
 #header {
-	font-family: "Rajdhani-Medium";
+	font-family: 'Rajdhani', sans-serif;
+	font-weight: 500;
 	font-size: 5.8em;
 }
 
@@ -89,7 +90,8 @@ a {
              /* MOBILE               */
 
 #header2 {
-	font-family: "Rajdhani-Bold";
+	font-family: 'Rajdhani', sans-serif;
+	font-weight: 700;
 	font-size: 2.3em;
 
 }
